# super-computing

./: CMakeLists.txt  FINAL.ipynb  README.md  README.txt  backtrack.py  branch_bound.cpp  branch_bound_par.cpp  busca_exaustiva.cpp  busca_local.cpp  busca_local.cu  busca_local_paralel.cpp  cria_entrada.py  entrada1  entrada2  entrada3  solucao-ingenua.cpp
output/: saida0c.txt  saida0cp.txt  saida0l.txt  saida0lgpu.txt  saida0lp.txt  saida0lpb.txt  saida0lpp.txt  saida1cp.txt  saida1l.txt  saida1lgpu.txt  saida1lp.txt  saida1lpb.txt  saida1lpp.txt  saida2c.txt  saida2cp.txt  saida2l.txt  saida2lb.txt  saida2lgpu.txt  saida2lp.txt  saida2lpb.txt  saida2lpp.txt  saida3c.txt  saida3cp.txt  saida3l.txt  saida3lb.txt  saida3lgpu.txt  saida3lp.txt  saida3lpb.txt
projeto-validacao/: validacao_pfe.py
